--- a/MakonFM/root/jplayer.tt
+++ b/MakonFM/root/jplayer.tt
@@ -4,9 +4,9 @@
     <div class="jp-type-single">
         <div class="jp-gui jp-interface">
             <ul class="jp-controls">
-                <li><a href="javascript:;" class="jp-play" tabindex="1"><span class="play Button">play</span></a></li>
-                <li><a href="javascript:;" class="jp-pause" tabindex="1"><span class="pause Button">pause</span></a></li>
-                <li><a href="javascript:;" class="jp-stop" tabindex="1"><span class="stop Button">stop</span></a></li>
+                <li><a href="javascript:;" class="jp-play" tabindex="1"><span class="play Button" title="přehrát (ctrl+mezera)">play</span></a></li>
+                <li><a href="javascript:;" class="jp-pause" tabindex="1"><span class="pause Button" title="pozastavit (ctrl+mezera)">pause</span></a></li>
+                <li><a href="javascript:;" class="jp-stop" tabindex="1"><span class="stop Button" title="stop">stop</span></a></li>
                 <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
                 <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
                 <li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
