--- a/MakonFM/root/jplayer.tt
+++ b/MakonFM/root/jplayer.tt
@@ -6,9 +6,9 @@
             <ul class="jp-controls">
                 <li><a href="javascript:;" class="jp-play" tabindex="1"><span class="play Button" title="přehrát (ctrl+mezera)">play</span></a></li>
                 <li><a href="javascript:;" class="jp-pause" tabindex="1"><span class="pause Button" title="pozastavit (ctrl+mezera)">pause</span></a></li>
-                <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
-                <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
-                <li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
+                <li><a href="javascript:;" class="jp-mute" tabindex="1" title="vypnout zvuk">mute</a></li>
+                <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">zapnout zvuk</a></li>
+                <li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">zesílit na max.</a></li>
             </ul>
 
             <div class="jp-progress">
@@ -22,10 +22,6 @@
 
             <div class="jp-current-time"></div>
             <div class="jp-duration"></div>
-            <ul class="jp-toggles">
-                <li><a href="javascript:;" class="jp-repeat" tabindex="1" title="repeat">repeat</a></li>
-                <li><a href="javascript:;" class="jp-repeat-off" tabindex="1" title="repeat off">repeat off</a></li>
-            </ul>
         </div>
         <div class="jp-title">
             <ul>
