--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -148,3 +148,12 @@ body div.jp-audio {
     width: 100%;
     height: 100%;
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color: white;
+}
+footer > * {
+    margin: 0 10px;
+}
