--- a/MakonFM/root/index.tt
+++ b/MakonFM/root/index.tt
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+<!--[if IE 8 ]><div class="ua-ie ua-ie8"><![endif]-->
 
     [%# <h1>Makoň.FM</h1> %]
     [%# <p class="hint" data-bind="text: hint_message">Vyberte nahrávku</p> %]
@@ -49,6 +50,7 @@
     </script>
     <script type="text/javascript" src="[% c.config.static_base %]/makonfm.js[% c.v('js') %]"></script>
 
+<!--[if IE 8 ]></div><![endif]-->
 </body>
 
 </html>
