--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -182,3 +182,9 @@ footer label {
     background-color: gold;
     background-image: linear-gradient(to bottom, #FFEB80 43%, #FFD700);
 }
+
+.curword input {
+    border: 0 none;
+    font: inherit;
+    width: 500px;
+}
