--- a/MakonFM/root/subtitles.tt
+++ b/MakonFM/root/subtitles.tt
@@ -16,13 +16,13 @@
 <dl class="curword" data-bind="if: inspected_word">
 <!-- ko with: inspected_word -->
     <dt class="occurrence">Výskyt</dt>
-    <dd class="occurrence" data-bind="text: occurrence"></dd>
+    <dd class="occurrence"><input type="text" data-bind="value: occurrence, enable: humanic" /></dd>
     
     <dt class="fonet">Výslovnost</dt>
-    <dd class="fonet" data-bind="text: fonet"></dd>
+    <dd class="fonet"><input type="text" data-bind="value: fonet, enable: humanic" /></dd>
     
     <dt class="wordform">Slovní tvar</dt>
-    <dd class="wordform" data-bind="text: wordform"></dd>
+    <dd class="wordform"><input type="text" data-bind="value: wordform, enable: humanic" /></dd>
     
     <dt class="timestamp">Pozice</dt>
     <dd class="timestamp" data-bind="text: $root.format_time(timestamp)"></dd>
