overhauled the editation mode interface
- the other elements now stay visible but overlaid;
- the subs now get animated down on editation start;
- textarea with edited subs now unwraps the observable;
- TODO: do the edited_subtitles_str still disappear???

--- a/MakonFM/root/editor.tt
+++ b/MakonFM/root/editor.tt
@@ -1,27 +1,31 @@
-<div class="subedit Window" data-bind="visible: editation_active">
-    <div class="Time-control">
-        <div class="Window-edges">
-            <div class="Start">
-                <button data-bind="click: dec_window_start" title="začít dřív">-</button>
-                <input type="text" data-bind="value: window_start.formatted" title="začátek úseku" />
-                <button data-bind="click: inc_window_start" title="začít později">+</button>
-            </div>
-            <div class="End">
-                <button data-bind="click: dec_window_end" title="skončit dřív">-</button>
-                <input type="text" data-bind="value: window_end.formatted" title="konec úseku" />
-                <button data-bind="click: inc_window_end" title="skončit později">+</button>
-            </div>
-        </div>
-        <!--div class="waveform">
-            <canvas></canvas>
-        </div-->
-    </div>
-    <textarea data-bind="value: edited_subtitles.str" class="js-subedit"></textarea>
-    <div class="Button-pane">
-        <a class="icn Play" title="přehrát (ctrl+space)" data-bind="click: play_window"   ></a>
-        <a class="icn Stop" title="stop (ctrl+space)"    data-bind="click: stop_window"   ></a>
-        <a class="icn Save" title="uložit (ctrl+enter)"  data-bind="click: save_editation"></a>
-    </div>
-    <a class="Close-button" data-bind="click: cancel_editation" title="Zrušit editaci">&#9747;</a>
+<div class="editor-overlay">
 </div>
 
+<div class="subedit Window" data-bind="style: { opacity: editation_active() ? '1' : '0' }">
+    <div class="Pad">
+        <div class="Time-control">
+            <div class="Window-edges">
+                <div class="Start">
+                    <button data-bind="click: dec_window_start" title="začít dřív">-</button>
+                    <input type="text" data-bind="value: window_start.formatted" title="začátek úseku" />
+                    <button data-bind="click: inc_window_start" title="začít později">+</button>
+                </div>
+                <div class="End">
+                    <button data-bind="click: dec_window_end" title="skončit dřív">-</button>
+                    <input type="text" data-bind="value: window_end.formatted" title="konec úseku" />
+                    <button data-bind="click: inc_window_end" title="skončit později">+</button>
+                </div>
+            </div>
+            <!--div class="waveform">
+                <canvas></canvas>
+            </div-->
+        </div>
+        <textarea data-bind="value: edited_subtitles_str()" class="js-subedit"></textarea>
+        <div class="Button-pane">
+            <a class="icn Play" title="přehrát (ctrl+space)" data-bind="click: play_window"   ></a>
+            <a class="icn Stop" title="stop (ctrl+space)"    data-bind="click: stop_window"   ></a>
+            <a class="icn Save" title="uložit (ctrl+enter)"  data-bind="click: save_editation"></a>
+        </div>
+        <a class="Close-button" data-bind="click: cancel_editation" title="Zrušit editaci">&#9747;</a>
+    </div>
+</div>
