--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -33,23 +33,39 @@ h1 {
     margin: 0;
     font-weight: normal;
 }
+.main {
+    position: relative;
+    margin-top: 58px;
+    transition: padding 1s;
+}
 .subtitles {
     height: 66px;
     overflow: hidden;
     position: relative;
-    margin: 58px 10px 0;
+    margin: 0 10px;
     line-height: 1.25em;
 }
-.subtitles.edited {
+/*.editing .subtitles {
     height: auto;
-}
+}*/
 .subtitles .cur {
     background-color: rgb(255,255,130);
 }
 .subedit {
     margin: 0;
-    padding: 10px;
-    position: relative;
+    position: absolute;
+    top: 0;
+    z-index: -2;
+    width: 100%;
+    background-color: white;
+    opacity: 0;
+    transition: opacity 1s;
+}
+.editing .subedit {
+    z-index: 2;
+}
+.subedit .Pad {
+    padding: 0 10px;
 }
 
 .subedit textarea {
@@ -75,12 +91,25 @@ h1 {
 .subedit .Close-button {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 10px;
     font-weight: bold;
     border: solid 1px gray;
     border-radius: 3px;
     background-color: #463851;
     padding: 0 3px;
+}
+.editor-overlay {
+    z-index: -1;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+}
+.editing .editor-overlay {
+    z-index: 1;
+    background-color: rgba(127,127,127,0.5);
 }
 
 .icn {
@@ -115,7 +144,7 @@ h1 {
     border-radius: 17px;
 }
 
-.edited .selected {
+.editing .selected {
     background-color: #444;
     color: #BBB;
     outline: 3px solid #444;
