--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -220,3 +220,10 @@ footer label {
     color: black;
     background: transparent;
 }
+
+.toggled.Off {
+    display: none;
+}
+.menu {
+    min-height: 142px;
+}
