now marking words with CM score < 0.5

--- a/MakonFM/root/static/makonfm.css
+++ b/MakonFM/root/static/makonfm.css
@@ -156,6 +156,10 @@ h1 {
 .word.humanic {
     font-weight: bold;
 }
+.word.wrongside {
+    border-bottom-style: dashed;
+    border-bottom-width: 1px;
+}
 .show-content-after:after {
     content: " " attr(content-after);
     font-weight: bold;
