--- a/MakonFM/root/subtitles.tt
+++ b/MakonFM/root/subtitles.tt
@@ -6,10 +6,10 @@
             corrected : corrected,
             humanic   : humanic,
             selected  : selected,
-            wrongside : (+cmscore||1) < 0.3
+            wrongside : (+$data.cmscore||1) < 0.3
         },
         style: {
-            borderBottomColor: 'hsl(0,100%,'+(50+166*(+cmscore||1))+'%)'
+            borderBottomColor: 'hsl(0,100%,'+(50+166*(+$data.cmscore||1))+'%)'
         },
         attr: {
             id: $root.name + '-word-ts-' + timestamp,
