--- a/MakonFM/root/footer.tt
+++ b/MakonFM/root/footer.tt
@@ -1,4 +1,4 @@
-<footer>
+﻿<footer>
     <a href="/manual/" target="_blank">manuál</a>
     <label>
         data &copy; 1960 &ndash; 1992 Karel Makoň; k dispozici pod licení
