--- a/MakonFM/root/jplayer.tt
+++ b/MakonFM/root/jplayer.tt
@@ -1,4 +1,4 @@
-<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+﻿<div id="jquery_jplayer_1" class="jp-jplayer"></div>
 
 <div id="jp_container_1" class="jp-audio">
     <div class="jp-type-single">
