--- a/MakonFM/root/menu.tt
+++ b/MakonFM/root/menu.tt
@@ -1,4 +1,4 @@
-<ul class="menu">
+﻿<ul class="menu">
     <li class="menu-tracklist">
         <a class="menu-toggle js-next-toggler">vybrat nahrávku</a>
         <div class="toggled Off">
